--- a/Advanced_Lap_Report.ipynb
+++ b/Advanced_Lap_Report.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOf4gUcXExxxkYM8oF+OsN1",
+      "authorship_tag": "ABX9TyNQJ9QzXSZupzDg81+oC4Ti",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,12 +27,34 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 89,
+      "cell_type": "markdown",
+      "source": [
+        "TensorFlow: Data Loading and Preprocessing"
+      ],
       "metadata": {
-        "id": "C3z4_dXhUIKj"
+        "id": "p1CT2r178HM1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "C3z4_dXhUIKj",
+        "outputId": "0dca2731-9fb6-4677-c3ff-f1935f05ec44",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+            "\u001b[1m11490434/11490434\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n"
+          ]
+        }
+      ],
       "source": [
         "import tensorflow as tf\n",
         "from tensorflow.keras.datasets import mnist\n",
@@ -48,6 +70,15 @@
         "y_train = to_categorical(y_train)\n",
         "y_test = to_categorical(y_test)\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TensorFlow: Model Definition and Training"
+      ],
+      "metadata": {
+        "id": "qURiGjiR8GTz"
+      }
     },
     {
       "cell_type": "code",
@@ -66,8 +97,17 @@
       "metadata": {
         "id": "ifphuU5BUU0E"
       },
-      "execution_count": 90,
+      "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TensorFlow: Evaluation"
+      ],
+      "metadata": {
+        "id": "PJIDJCmf8SkH"
+      }
     },
     {
       "cell_type": "code",
@@ -85,25 +125,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3Zl-2BUhUU22",
-        "outputId": "700bcd33-c758-40e7-bb26-a02c53658de5"
+        "outputId": "2fc57970-635b-453c-a665-11df29d1576f"
       },
-      "execution_count": 91,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 3ms/step - accuracy: 0.8374 - loss: 0.5839\n",
+            "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 3ms/step - accuracy: 0.8323 - loss: 0.6025\n",
             "Epoch 2/5\n",
-            "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 3ms/step - accuracy: 0.9471 - loss: 0.1918\n",
+            "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 3ms/step - accuracy: 0.9460 - loss: 0.1855\n",
             "Epoch 3/5\n",
-            "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 4ms/step - accuracy: 0.9606 - loss: 0.1369\n",
+            "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 4ms/step - accuracy: 0.9602 - loss: 0.1384\n",
             "Epoch 4/5\n",
-            "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 3ms/step - accuracy: 0.9681 - loss: 0.1101\n",
+            "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 3ms/step - accuracy: 0.9692 - loss: 0.1043\n",
             "Epoch 5/5\n",
-            "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 3ms/step - accuracy: 0.9744 - loss: 0.0913\n",
-            "TensorFlow training time: 22.20 seconds\n"
+            "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 3ms/step - accuracy: 0.9736 - loss: 0.0891\n",
+            "TensorFlow training time: 16.85 seconds\n"
           ]
         }
       ]
@@ -126,7 +166,7 @@
         "id": "p6Pt_zybaZWr",
         "outputId": "eab0b41a-32c8-480d-80b7-f6f93b5caf1e"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,6 +177,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TensorFlow: Model Conversion to TFLite"
+      ],
+      "metadata": {
+        "id": "Hi3ftIgE8UVE"
+      }
     },
     {
       "cell_type": "code",
@@ -163,7 +212,7 @@
         "id": "UcISTXjrgqXd",
         "outputId": "3473ef37-1ee0-42c8-b489-77e868a97778"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,6 +235,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "PyTorch: Data Loading and Preprocessing"
+      ],
+      "metadata": {
+        "id": "pvOnioNg8VB7"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import torch\n",
@@ -206,8 +264,17 @@
       "metadata": {
         "id": "lBRDUy6NUU8x"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "PyTorch: Model Definition"
+      ],
+      "metadata": {
+        "id": "12IXr19E8VzZ"
+      }
     },
     {
       "cell_type": "code",
@@ -230,8 +297,17 @@
       "metadata": {
         "id": "7yeidLmPUU_g"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "PyTorch: Model Training"
+      ],
+      "metadata": {
+        "id": "8yl4pweb8WZZ"
+      }
     },
     {
       "cell_type": "code",
@@ -279,7 +355,7 @@
         "id": "AiQPZOywUVCb",
         "outputId": "53e5e229-56db-4e06-beb1-8f573abc85d5"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,6 +370,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "PyTorch: Evaluation"
+      ],
+      "metadata": {
+        "id": "CYn-7at58XCZ"
+      }
     },
     {
       "cell_type": "code",
@@ -324,7 +409,7 @@
         "id": "sBUWJ27qUVFN",
         "outputId": "20785818-bb10-404b-f303-5b2f85665179"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +434,7 @@
         "id": "pQzVGjMDUVIK",
         "outputId": "35d679f7-9957-4346-e243-40bee71473dc"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,8 +463,17 @@
       "metadata": {
         "id": "DOdAUS2WlNeX"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "PyTorch: Model Conversion to ONNX"
+      ],
+      "metadata": {
+        "id": "UF4VRNrb8a2G"
+      }
     },
     {
       "cell_type": "code",
@@ -410,7 +504,7 @@
         "id": "S_v1nv5JniIP",
         "outputId": "2130da26-097d-4bee-b598-3bbc234f7bab"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,6 +515,43 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Plotting results and outputs"
+      ],
+      "metadata": {
+        "id": "b2p-VEUA8bqQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Example data\n",
+        "epochs = [1, 2, 3, 4, 5]\n",
+        "tf_acc = [83.74, 94.71, 96.06, 96.81, 97.44]\n",
+        "torch_acc = [89.38, 94.40, 95.82, 96.61, 97.17]\n",
+        "\n",
+        "plt.figure(figsize=(8, 5))\n",
+        "plt.plot(epochs, tf_acc, marker='o', label=\"TensorFlow\")\n",
+        "plt.plot(epochs, torch_acc, marker='s', label=\"PyTorch\")\n",
+        "plt.title(\"Training Accuracy per Epoch\")\n",
+        "plt.xlabel(\"Epoch\")\n",
+        "plt.ylabel(\"Accuracy (%)\")\n",
+        "plt.legend()\n",
+        "plt.grid(True)\n",
+        "plt.tight_layout()\n",
+        "plt.savefig(\"training_accuracy.png\")  # This saves the file in Colab's working directory\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "ddVKS18W7Ngx"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
